fixed prevent mobile overflow hidden

--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,12 @@ body {
 
     webkit-tap-highlight-color: #74acdf
 }
-
+html, body {
+    overflow-x: hidden;
+}
+body {
+    position: relative
+}
 .btn-primary,
 .btn-xl,
 h1,
